# autogui

./: .gitignore  README.md  TODO.md  damai.spec  pyproject.toml
.github/workflows/: release.yml
